@@ -1,4 +1,4 @@
-/* Generated by re2c 0.9.12 on Mon Feb 27 20:39:38 2006 */
+/* Generated by re2c 0.9.12 on Mon Mar  6 22:37:54 2006 */
 #line 1 "ext/date/lib/parse_date.re"
 /*
    +----------------------------------------------------------------------+
@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: parse_date.c,v 1.29.2.28 2006/02/27 19:41:27 derick Exp $ */
+/* $Id: parse_date.c,v 1.29.2.29 2006/03/06 21:44:53 derick Exp $ */
 
 #include "timelib.h"
 
@@ -1139,7 +1139,7 @@ yy11:
 	yyaccept = 0;
 	yych = *(YYMARKER = ++YYCURSOR);
 	if(yych == '-')	goto yy1185;
-	if(yych <= '0')	goto yy12;
+	if(yych <= '/')	goto yy12;
 	if(yych <= '9')	goto yy1186;
 	goto yy12;
 yy12:
@@ -16619,7 +16619,7 @@ yy1184:
 yy1185:
 	YYDEBUG(1185, *YYCURSOR);
 	yych = *++YYCURSOR;
-	if(yych <= '0')	goto yy53;
+	if(yych <= '/')	goto yy53;
 	if(yych >= ':')	goto yy53;
 	goto yy1186;
 yy1186:
